added  base style, navBar,  js script for menu burger

--- a/index.html
+++ b/index.html
@@ -3,8 +3,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Vintage Cars</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <nav class="nav">
+          <a href="#" class="nav__logo">Vintage Cars</a>
+          <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link"><span>Home</span></a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link"><span>Cars</span></a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link"><span>Gallery</span></a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link"><span>Contacts</span></a>
+              </li>
+            </ul>
+            <i class="uil uil-times nav__close" id="nav-close"></i>
+          </div>
+          <div class="nav__btns">
+            <div class="nav__socials">
+              <a href="#"> <i class="uil uil-linkedin-alt"></i></a>
+              <a href="#"> <i class="uil uil-facebook-f"></i></a>
+              <a href="#"><i class="uil uil-instagram"></i></a>
+              <a href="#"> <i class="uil uil-twitter"></i></a>
+            </div>
+            <div class="nav__toggle" id="nav-toggle">
+              <i class="uil uil-bars"></i>
+            </div>
+          </div>
+        </nav>
+      </header>
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
