--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <a href="#" class="nav__logo">Vintage Cars</a>
           <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
+              <a href="#" class="nav__logo">Vintage Cars</a>
               <li class="nav__item">
                 <a href="#" class="nav__link"><span>Home</span></a>
               </li>
@@ -29,15 +30,40 @@
               <li class="nav__item">
                 <a href="#" class="nav__link"><span>Contacts</span></a>
               </li>
+              <footer class="footer">
+                <div>
+                  Copyright ©2022 All rights reserved | This template is made
+                  with
+                  <i class="uil uil-heart"></i>
+                </div>
+                <span>by Ruslan Prakapets</span>
+              </footer>
             </ul>
             <i class="uil uil-times nav__close" id="nav-close"></i>
           </div>
           <div class="nav__btns">
             <div class="nav__socials">
-              <a href="#"> <i class="uil uil-linkedin-alt"></i></a>
-              <a href="#"> <i class="uil uil-facebook-f"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
-              <a href="#"> <i class="uil uil-twitter"></i></a>
+              <a href="#"
+                ><i
+                  class="uil uil-linkedin-alt tooltip"
+                  data-tooltip="linkedin"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="uil uil-facebook-f tooltip"
+                  data-tooltip="facebook"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="uil uil-instagram tooltip"
+                  data-tooltip="instagram"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="uil uil-twitter tooltip" data-tooltip="twitter"></i
+              ></a>
             </div>
             <div class="nav__toggle" id="nav-toggle">
               <i class="uil uil-bars"></i>
