--- a/index.html
+++ b/index.html
@@ -71,7 +71,48 @@
           </div>
         </nav>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <section class="home" id="home">
+          <div class="home__container">
+            <div
+              class="slide"
+              style="background-image: url(./assets/img/01.jpg)"
+            >
+              <h3>Ford Mustang</h3>
+            </div>
+            <div
+              class="slide"
+              style="background-image: url(./assets/img/02.jpg)"
+            >
+              <h3>Car</h3>
+            </div>
+            <div
+              class="slide"
+              style="background-image: url(./assets/img/03.jpg)"
+            >
+              <h3>Chevrolet Impala</h3>
+            </div>
+            <div
+              class="slide"
+              style="background-image: url(./assets/img/04.jpg)"
+            >
+              <h3>Car</h3>
+            </div>
+            <div
+              class="slide"
+              style="background-image: url(./assets/img/05.jpg)"
+            >
+              <h3>Car</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
+                sint quo, aliquam possimus magnam officiis eum blanditiis, unde
+                exercitationem fugiat ut tempore magni distinctio eius ea cum,
+                quisquam pariatur iusto.
+              </p>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
     <script src="assets/js/main.js"></script>
