added preview section, contact section, footer, content images and animations

--- a/index.html
+++ b/index.html
@@ -79,30 +79,54 @@
               style="background-image: url(./assets/img/01.jpg)"
             >
               <h3>Ford Mustang</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
+                sint quo, aliquam possimus magnam officiis eum blanditiis, unde
+                exercitationem fugiat ut tempore magni distinctio eius ea cum,
+                quisquam pariatur iusto.
+              </p>
             </div>
             <div
               class="slide"
-              style="background-image: url(./assets/img/02.jpg)"
+              style="background-image: url(./assets/img/06.jpg)"
             >
-              <h3>Car</h3>
+              <h3>Porsche 911S</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
+                sint quo, aliquam possimus magnam officiis eum blanditiis, unde
+                exercitationem fugiat ut tempore magni distinctio eius ea cum,
+                quisquam pariatur iusto.
+              </p>
             </div>
             <div
               class="slide"
               style="background-image: url(./assets/img/03.jpg)"
             >
               <h3>Chevrolet Impala</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
+                sint quo, aliquam possimus magnam officiis eum blanditiis, unde
+                exercitationem fugiat ut tempore magni distinctio eius ea cum,
+                quisquam pariatur iusto.
+              </p>
             </div>
             <div
               class="slide"
-              style="background-image: url(./assets/img/04.jpg)"
+              style="background-image: url(./assets/img/10.jpg)"
             >
-              <h3>Car</h3>
+              <h3>Cadillac</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
+                sint quo, aliquam possimus magnam officiis eum blanditiis, unde
+                exercitationem fugiat ut tempore magni distinctio eius ea cum,
+                quisquam pariatur iusto.
+              </p>
             </div>
             <div
               class="slide"
-              style="background-image: url(./assets/img/05.jpg)"
+              style="background-image: url(./assets/img/08.jpg)"
             >
-              <h3>Car</h3>
+              <h3>Alfa Romeo</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
                 sint quo, aliquam possimus magnam officiis eum blanditiis, unde
@@ -112,8 +136,114 @@
             </div>
           </div>
         </section>
+        <section class="preview">
+          <h1 class="preview__title element-animation">
+            “Lorem ipsum dolor sit amet consectetur adipisicing elit.Blanditiis,
+            <strong>aspernatur pariatur </strong>quibusdam saepe, enim tempore
+            dicta, numquam mollitia incidunt ipsam accusantium beatae.”
+          </h1>
+          <div class="preview__container">
+            <div class="preview__card element-animation">
+              <div class="preview__img">
+                <div
+                  class="prev-image"
+                  style="background-image: url(./assets/img/02.jpg)"
+                ></div>
+                <div class="preview__description">
+                  <span class="preview__data">Sep 27, 2022</span>
+                  <h3 class="preview__subtitle">Lorem ipsum dolor sit amet.</h3>
+                </div>
+              </div>
+            </div>
+            <div class="preview__card element-animation">
+              <div class="preview__img">
+                <div
+                  class="prev-image"
+                  style="background-image: url(./assets/img/05.jpg)"
+                ></div>
+                <div class="preview__description">
+                  <span class="preview__data">Sep 27, 2022</span>
+                  <h3 class="preview__subtitle">Lorem ipsum dolor sit amet.</h3>
+                </div>
+              </div>
+            </div>
+            <div class="preview__card element-animation">
+              <div class="preview__img">
+                <div
+                  class="prev-image"
+                  style="background-image: url(./assets/img/07.jpg)"
+                ></div>
+                <div class="preview__description">
+                  <span class="preview__data">Sep 27, 2022</span>
+                  <h3 class="preview__subtitle">Lorem ipsum dolor sit amet.</h3>
+                </div>
+              </div>
+            </div>
+            <div class="preview__card element-animation">
+              <div class="preview__img">
+                <div
+                  class="prev-image"
+                  style="background-image: url(./assets/img/14.jpg)"
+                ></div>
+                <div class="preview__description">
+                  <span class="preview__data">Sep 27, 2022</span>
+                  <h3 class="preview__subtitle">Lorem ipsum dolor sit amet.</h3>
+                </div>
+              </div>
+            </div>
+            <div class="preview__card element-animation">
+              <div class="preview__img">
+                <div
+                  class="prev-image"
+                  style="background-image: url(./assets/img/12.jpg)"
+                ></div>
+                <div class="preview__description">
+                  <span class="preview__data">Sep 27, 2022</span>
+                  <h3 class="preview__subtitle">Lorem ipsum dolor sit amet.</h3>
+                </div>
+              </div>
+            </div>
+            <div class="preview__card element-animation">
+              <div class="preview__img">
+                <div
+                  class="prev-image"
+                  style="background-image: url(./assets/img/09.jpg)"
+                ></div>
+                <div class="preview__description">
+                  <span class="preview__data">Sep 27, 2022</span>
+                  <h3 class="preview__subtitle">Lorem ipsum dolor sit amet.</h3>
+                </div>
+              </div>
+            </div>
+            <div class="preview__card element-animation">
+              <div class="preview__img">
+                <div
+                  class="prev-image"
+                  style="background-image: url(./assets/img/11.jpg)"
+                ></div>
+                <div class="preview__description">
+                  <span class="preview__data">Sep 27, 2022</span>
+                  <h3 class="preview__subtitle">Lorem ipsum dolor sit amet.</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="contact element-animation">
+          <h2 class="contact__title">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
+            sapiente?
+          </h2>
+          <h3 class="contact__subtitle">Lorem ipsum dolor sit amet.</h3>
+          <div class="contanct__button">contact me</div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div>
+          Copyright ©2022 All rights reserved | This template is made with
+          <i class="uil uil-heart"></i> by Ruslan Prakapets
+        </div>
+      </footer>
     </div>
     <script src="assets/js/main.js"></script>
   </body>
