added: min-images, pages: cars,gallery,contacts

--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
     <div class="wrapper">
       <header class="header">
         <nav class="nav">
-          <a href="#" class="nav__logo">Vintage Cars</a>
+          <a href="/index.html" class="nav__logo">Vintage Cars</a>
           <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
               <a href="#" class="nav__logo">Vintage Cars</a>
               <li class="nav__item">
-                <a href="#" class="nav__link"><span>Home</span></a>
+                <a href="#home" class="nav__link"><span>Home</span></a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link"><span>Cars</span></a>
+                <a href="/cars.html" class="nav__link"><span>Cars</span></a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link"><span>Gallery</span></a>
+                <a href="/gallery.html" class="nav__link"
+                  ><span>Gallery</span></a
+                >
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link"><span>Contacts</span></a>
+                <a href="/contacts.html" class="nav__link"
+                  ><span>Contacts</span></a
+                >
               </li>
               <footer class="footer">
                 <div>
@@ -76,7 +80,7 @@
           <div class="home__container">
             <div
               class="slide"
-              style="background-image: url(./assets/img/01.jpg)"
+              style="background-image: url(./assets/img/01-min.jpg)"
             >
               <h3>Ford Mustang</h3>
               <p>
@@ -88,7 +92,7 @@
             </div>
             <div
               class="slide"
-              style="background-image: url(./assets/img/06.jpg)"
+              style="background-image: url(./assets/img/06-min.jpg)"
             >
               <h3>Porsche 911S</h3>
               <p>
@@ -100,7 +104,7 @@
             </div>
             <div
               class="slide"
-              style="background-image: url(./assets/img/03.jpg)"
+              style="background-image: url(./assets/img/03-min.jpg)"
             >
               <h3>Chevrolet Impala</h3>
               <p>
@@ -112,7 +116,7 @@
             </div>
             <div
               class="slide"
-              style="background-image: url(./assets/img/10.jpg)"
+              style="background-image: url(./assets/img/10-min.jpg)"
             >
               <h3>Cadillac</h3>
               <p>
@@ -124,7 +128,7 @@
             </div>
             <div
               class="slide"
-              style="background-image: url(./assets/img/08.jpg)"
+              style="background-image: url(./assets/img/08-min.jpg)"
             >
               <h3>Alfa Romeo</h3>
               <p>
@@ -147,7 +151,7 @@
               <div class="preview__img">
                 <div
                   class="prev-image"
-                  style="background-image: url(./assets/img/02.jpg)"
+                  style="background-image: url(./assets/img/02-min.jpg)"
                 ></div>
                 <div class="preview__description">
                   <span class="preview__data">Sep 27, 2022</span>
@@ -159,7 +163,7 @@
               <div class="preview__img">
                 <div
                   class="prev-image"
-                  style="background-image: url(./assets/img/05.jpg)"
+                  style="background-image: url(./assets/img/05-min.jpg)"
                 ></div>
                 <div class="preview__description">
                   <span class="preview__data">Sep 27, 2022</span>
@@ -171,7 +175,7 @@
               <div class="preview__img">
                 <div
                   class="prev-image"
-                  style="background-image: url(./assets/img/07.jpg)"
+                  style="background-image: url(./assets/img/07-min.jpg)"
                 ></div>
                 <div class="preview__description">
                   <span class="preview__data">Sep 27, 2022</span>
@@ -183,7 +187,7 @@
               <div class="preview__img">
                 <div
                   class="prev-image"
-                  style="background-image: url(./assets/img/14.jpg)"
+                  style="background-image: url(./assets/img/14-min.jpg)"
                 ></div>
                 <div class="preview__description">
                   <span class="preview__data">Sep 27, 2022</span>
@@ -195,7 +199,7 @@
               <div class="preview__img">
                 <div
                   class="prev-image"
-                  style="background-image: url(./assets/img/12.jpg)"
+                  style="background-image: url(./assets/img/12-min.jpg)"
                 ></div>
                 <div class="preview__description">
                   <span class="preview__data">Sep 27, 2022</span>
@@ -207,7 +211,7 @@
               <div class="preview__img">
                 <div
                   class="prev-image"
-                  style="background-image: url(./assets/img/09.jpg)"
+                  style="background-image: url(./assets/img/09-min.jpg)"
                 ></div>
                 <div class="preview__description">
                   <span class="preview__data">Sep 27, 2022</span>
@@ -219,7 +223,7 @@
               <div class="preview__img">
                 <div
                   class="prev-image"
-                  style="background-image: url(./assets/img/11.jpg)"
+                  style="background-image: url(./assets/img/11-min.jpg)"
                 ></div>
                 <div class="preview__description">
                   <span class="preview__data">Sep 27, 2022</span>
