added: adaptive pages and update links

--- a/cars.html
+++ b/cars.html
@@ -76,7 +76,7 @@
         </nav>
       </header>
       <main class="main">
-        <section class="contacts" id="contacts">
+        <section class="contacts" id="cars">
           <div class="car__container">
             <div
               class="car__image element-animation"
