--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <header class="header">
         <nav class="nav">
-          <a href="/index.html" class="nav__logo">Vintage Cars</a>
+          <a href="#cars" class="nav__logo">Vintage Cars</a>
           <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
               <a href="#" class="nav__logo">Vintage Cars</a>
@@ -22,15 +22,23 @@
                 <a href="#home" class="nav__link"><span>Home</span></a>
               </li>
               <li class="nav__item">
-                <a href="/cars.html" class="nav__link"><span>Cars</span></a>
+                <a
+                  href="https://kyoto430.github.io/Vintage-cars/cars.html"
+                  class="nav__link"
+                  ><span>Cars</span></a
+                >
               </li>
               <li class="nav__item">
-                <a href="/gallery.html" class="nav__link"
+                <a
+                  href="https://kyoto430.github.io/Vintage-cars/gallery.html"
+                  class="nav__link"
                   ><span>Gallery</span></a
                 >
               </li>
               <li class="nav__item">
-                <a href="/contacts.html" class="nav__link"
+                <a
+                  href="https://kyoto430.github.io/Vintage-cars/contacts.html"
+                  class="nav__link"
                   ><span>Contacts</span></a
                 >
               </li>
