--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 <a href="#home" class="nav__link"><span>Home</span></a>
               </li>
               <li class="nav__item">
-                <a
-                  href="https://kyoto430.github.io/Vintage-cars/cars.html"
-                  class="nav__link"
+                <a href="/Vintage-cars/cars.html" class="nav__link"
                   ><span>Cars</span></a
                 >
               </li>
