--- a/cars.html
+++ b/cars.html
@@ -17,20 +17,26 @@
           <a href="/index.html" class="nav__logo">Vintage Cars</a>
           <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
-              <a href="#" class="nav__logo">Vintage Cars</a>
+              <a href="/Vintage-cars/index.html" class="nav__logo"
+                >Vintage Cars</a
+              >
               <li class="nav__item">
-                <a href="/index.html" class="nav__link"><span>Home</span></a>
+                <a href="/Vintage-cars/index.html" class="nav__link"
+                  ><span>Home</span></a
+                >
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link"><span>Cars</span></a>
+                <a href="/Vintage-cars/cars.html" class="nav__link"
+                  ><span>Cars</span></a
+                >
               </li>
               <li class="nav__item">
-                <a href="/gallery.html" class="nav__link"
+                <a href="/Vintage-cars/gallery.html" class="nav__link"
                   ><span>Gallery</span></a
                 >
               </li>
               <li class="nav__item">
-                <a href="/contacts.html" class="nav__link"
+                <a href="/Vintage-cars/contacts.html" class="nav__link"
                   ><span>Contacts</span></a
                 >
               </li>
