--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
           <a href="#cars" class="nav__logo">Vintage Cars</a>
           <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
-              <a href="#" class="nav__logo">Vintage Cars</a>
+              <a href="/Vintage-cars/index.html" class="nav__logo"
+                >Vintage Cars</a
+              >
               <li class="nav__item">
-                <a href="#home" class="nav__link"><span>Home</span></a>
+                <a href="/Vintage-cars/index.html" class="nav__link"
+                  ><span>Home</span></a
+                >
               </li>
               <li class="nav__item">
                 <a href="/Vintage-cars/cars.html" class="nav__link"
@@ -27,16 +31,12 @@
                 >
               </li>
               <li class="nav__item">
-                <a
-                  href="https://kyoto430.github.io/Vintage-cars/gallery.html"
-                  class="nav__link"
+                <a href="/Vintage-cars/gallery.html" class="nav__link"
                   ><span>Gallery</span></a
                 >
               </li>
               <li class="nav__item">
-                <a
-                  href="https://kyoto430.github.io/Vintage-cars/contacts.html"
-                  class="nav__link"
+                <a href="/Vintage-cars/contacts.html" class="nav__link"
                   ><span>Contacts</span></a
                 >
               </li>
