--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <header class="header">
         <nav class="nav">
-          <a href="#cars" class="nav__logo">Vintage Cars</a>
+          <a href="/Vintage-cars/index.html" class="nav__logo">Vintage Cars</a>
           <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
               <a href="/Vintage-cars/index.html" class="nav__logo"
