--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Vintage Cars" />
+    <meta name="keywords" content="Vintage cars, cars" />
+    <meta name="author" content="Ruslan Prakapets" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-    />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="shortcut icon" href="./assets/img/icons/car.png" />
     <title>Vintage Cars</title>
   </head>
   <body>
@@ -44,39 +45,57 @@
                 <div>
                   Copyright ©2022 All rights reserved | This template is made
                   with
-                  <i class="uil uil-heart"></i>
+                  <img
+                    src="./assets/img/icons/heart.svg"
+                    alt="icon-heart"
+                    width="18"
+                    height="18"
+                  />
                 </div>
                 <span>by Ruslan Prakapets</span>
               </footer>
             </ul>
-            <i class="uil uil-times nav__close" id="nav-close"></i>
+            <img
+              class="nav__close icon"
+              id="nav-close"
+              src="./assets/img/icons/close.svg"
+              alt="icon-close"
+            />
           </div>
           <div class="nav__btns">
             <div class="nav__socials">
-              <a href="#"
-                ><i
-                  class="uil uil-linkedin-alt tooltip"
-                  data-tooltip="linkedin"
-                ></i
-              ></a>
-              <a href="#"
-                ><i
-                  class="uil uil-facebook-f tooltip"
-                  data-tooltip="facebook"
-                ></i
-              ></a>
-              <a href="#"
-                ><i
-                  class="uil uil-instagram tooltip"
-                  data-tooltip="instagram"
-                ></i
-              ></a>
-              <a href="#"
-                ><i class="uil uil-twitter tooltip" data-tooltip="twitter"></i
-              ></a>
+              <a href="#" class="tooltip" data-tooltip="linkedin">
+                <img
+                  class="icon"
+                  src="./assets/img/icons/linkedin.svg"
+                  alt="icon-linkedin"
+                />
+              </a>
+              <a href="#" class="tooltip" data-tooltip="facebook">
+                <img
+                  class="icon"
+                  src="./assets/img/icons/facebook.svg"
+                  alt="icon-facebook"
+              /></a>
+              <a href="#" class="tooltip" data-tooltip="instagram"
+                ><img
+                  class="icon"
+                  src="./assets/img/icons/instagram.svg"
+                  alt="icon-instagram"
+              /></a>
+              <a href="#" class="tooltip" data-tooltip="twitter"
+                ><img
+                  class="icon"
+                  src="./assets/img/icons/twitter.svg"
+                  alt="icon-twitter"
+              /></a>
             </div>
             <div class="nav__toggle" id="nav-toggle">
-              <i class="uil uil-bars"></i>
+              <img
+                class="icon"
+                src="./assets/img/icons/bars.svg"
+                alt="icon-bars"
+              />
             </div>
           </div>
         </nav>
@@ -128,7 +147,13 @@
       <footer class="footer">
         <div>
           Copyright ©2022 All rights reserved | This template is made with
-          <i class="uil uil-heart"></i> by Ruslan Prakapets
+          <img
+            src="./assets/img/icons/heart.svg"
+            alt="icon-heart"
+            width="16"
+            height="16"
+          />
+          by Ruslan Prakapets
         </div>
       </footer>
     </div>
