--- a/contacts.html
+++ b/contacts.html
@@ -143,7 +143,7 @@
               ></textarea>
             </div>
           </form>
-          <div class="contanct__button">contact me</div>
+          <div class="contact__button">contact me</div>
         </section>
       </main>
       <footer class="footer">
